# ti_reports_analysis_agent

./: .env.example  Demo.ipynb  README.md  main.py  pyproject.toml
blanks/: prompts.py
src/: gigachat_api.py  gigachat_proxy.py  llm.py  state.py  tools.py  utils.py
